--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "semantic-data-form",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "main": "dist/components/DataForm/index.js",
   "types": "dist/components/DataForm/index.d.ts",
   "author": "Ankit Patial<ankit@simsaw.com>",
   "description": "Configurable data form based on Semantic UI and Formik",
   "keywords": [
-    "Data Form",
-    "Form",
-    "SemanticUI Form",
-    "Formik Form",
-    "Formik Json Form",
-    "JSON form",
-    "Configurable Form"
+    "Json Form",
+    "Semantic Json Form",
+    "Semantic Form",
+    "Formik JSON form"
   ],
   "scripts": {
     "start": "react-scripts start",
